--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(BJStat)
 export(HCCritical)
 export(HCPvalue)
 export(HCStat)
+export(KSPValue)
 export(MMinusCritical)
 export(MMinusCriticalMC)
 export(MMinusPvalue)
